--- a/Pipfile
+++ b/Pipfile
@@ -13,11 +13,13 @@ black = "==21.9b0"
 flake8 = "*"
 isort = "*"
 mkdocs = "*"
+mock = "*"
 mypy = "*"
 pytest = "*"
 pytest-cov = "*"
 shellcheck-py = "*"
 twine = "*"
+types-mock = "*"
 types-pyyaml = "*"
 yamllint = "*"
 
