--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,12 +14,12 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - pipenv-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
-            - pipenv-{{ .Branch }}-
-            - pipenv-
+            - pipenv-1-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+            - pipenv-1-{{ .Branch }}-
+            - pipenv-1-
       - run: pipenv sync --dev
       - save_cache:
-          key: pipenv-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          key: pipenv-1-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
           paths:
             - .venv
       - run: pipenv run ./lint.sh
