--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,28 +4,146 @@ orbs:
   codecov: codecov/codecov@3.0.0
 
 jobs:
-  build:
+  cache:
     docker:
       - image: cimg/python:3.10.0
-    environment:
-      PIPENV_VENV_IN_PROJECT: true
-    resource_class: small
+    resource_class: medium
     steps:
       - checkout
       - restore_cache:
           keys:
-            - pipenv-1-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
-            - pipenv-1-{{ .Branch }}-
-            - pipenv-1-
+            - pipenv-{{ checksum "Pipfile.lock" }}
+            - pipenv-
       - run: pipenv sync --dev
       - save_cache:
-          key: pipenv-1-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          key: pipenv-{{ checksum "Pipfile.lock" }}
           paths:
             - .venv
-      - run: pipenv run ./lint.sh
-      - run: pipenv run pytest
+
+  lint_black:
+    docker:
+      - image: cimg/python:3.10.0
+    environment:
+    resource_class: medium
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - pipenv-{{ checksum "Pipfile.lock" }}
+      - run: pipenv run ./scripts/lint-black.sh
+
+  lint_flake8:
+    docker:
+      - image: cimg/python:3.10.0
+    environment:
+    resource_class: medium
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - pipenv-{{ checksum "Pipfile.lock" }}
+      - run: pipenv run ./scripts/lint-flake8.sh
+
+  lint_isort:
+    docker:
+      - image: cimg/python:3.10.0
+    environment:
+    resource_class: medium
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - pipenv-{{ checksum "Pipfile.lock" }}
+      - run: pipenv run ./scripts/lint-isort.sh
+
+  lint_package_types:
+    docker:
+      - image: cimg/python:3.10.0
+    environment:
+    resource_class: medium
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - pipenv-{{ checksum "Pipfile.lock" }}
+      - restore_cache:
+          keys:
+            - mypy-package-{{ .Branch }}
+            - mypy-package-main
+      - run: pipenv run ./scripts/lint-package-types.sh
+      - save_cache:
+          key: mypy-package-{{ .Branch }}
+          paths:
+            - .mypy_cache
+
+  lint_shell:
+    docker:
+      - image: cimg/python:3.10.0
+    environment:
+    resource_class: medium
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - pipenv-{{ checksum "Pipfile.lock" }}
+      - run: pipenv run ./scripts/lint-shell.sh
+
+  lint_test_types:
+    docker:
+      - image: cimg/python:3.10.0
+    environment:
+    resource_class: medium
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - pipenv-{{ checksum "Pipfile.lock" }}
+      - restore_cache:
+          keys:
+            - mypy-test-{{ .Branch }}
+            - mypy-test-main
+      - run: pipenv run ./scripts/lint-test-types.sh
+      - save_cache:
+          key: mypy-test-{{ .Branch }}
+          paths:
+            - .mypy_cache
+
+  lint_yaml:
+    docker:
+      - image: cimg/python:3.10.0
+    environment:
+    resource_class: medium
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - pipenv-{{ checksum "Pipfile.lock" }}
+      - run: pipenv run ./scripts/lint-yaml.sh
+
+  test:
+    docker:
+      - image: cimg/python:3.10.0
+    environment:
+    resource_class: medium
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - pipenv-{{ checksum "Pipfile.lock" }}
+      - run: pipenv run ./test.sh
       - codecov/upload:
           file: coverage.xml
+
+  build:
+    docker:
+      - image: cimg/python:3.10.0
+    environment:
+    resource_class: medium
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - pipenv-{{ checksum "Pipfile.lock" }}
       - run: pipenv run ./build.sh
       - run: pip install dist/*
       - run: ./test-cli.sh
@@ -35,9 +153,82 @@ jobs:
 workflows:
   default:
     jobs:
-      - build:
+      - cache:
+          context:
+            - python
           filters:
             branches:
               only: /.*/
             tags:
               only: /.*/
+
+      - lint_black:
+          context:
+            - python
+          requires:
+            - cache
+
+      - lint_flake8:
+          context:
+            - python
+          requires:
+            - cache
+
+      - lint_isort:
+          context:
+            - python
+          requires:
+            - cache
+
+      - lint_package_types:
+          context:
+            - python
+          requires:
+            - cache
+
+      - lint_shell:
+          context:
+            - python
+          requires:
+            - cache
+
+      - lint_test_types:
+          context:
+            - python
+          requires:
+            - cache
+
+      - lint_yaml:
+          context:
+            - python
+          requires:
+            - cache
+
+      - test:
+          context:
+            - python
+          filters:
+            branches:
+              only: /.*/
+            tags:
+              only: /.*/
+          requires:
+            - cache
+
+      - build:
+          context:
+            - python
+          filters:
+            branches:
+              only: /.*/
+            tags:
+              only: /.*/
+          requires:
+            - lint_black
+            - lint_flake8
+            - lint_isort
+            - lint_package_types
+            - lint_shell
+            - lint_test_types
+            - lint_yaml
+            - test
