--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
   "cSpell.words": [
     "codeql",
+    "comprehemd",
     "dinject",
     "epilog",
-    "mdcode",
+    "getvalue",
+    "Gruber",
     "mypy",
     "naughtty",
-    "thtml"
+    "thtml",
+    "xlarge"
   ]
 }
