--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,10 @@ orbs:
   codecov: codecov/codecov@3.0.0
 
 jobs:
-  cache:
+  lint_black:
     docker:
       - image: cimg/python:3.10.0
-    resource_class: medium
+    resource_class: xlarge
     steps:
       - checkout
       - restore_cache:
@@ -15,61 +15,53 @@ jobs:
             - pipenv-{{ checksum "Pipfile.lock" }}
             - pipenv-
       - run: pipenv sync --dev
+      - run: pipenv run ./scripts/lint-black.sh
       - save_cache:
           key: pipenv-{{ checksum "Pipfile.lock" }}
           paths:
             - .venv
 
-  lint_black:
-    docker:
-      - image: cimg/python:3.10.0
-    environment:
-    resource_class: medium
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - pipenv-{{ checksum "Pipfile.lock" }}
-      - run: pipenv run ./scripts/lint-black.sh
-
   lint_flake8:
     docker:
       - image: cimg/python:3.10.0
-    environment:
-    resource_class: medium
+    resource_class: xlarge
     steps:
       - checkout
       - restore_cache:
           keys:
             - pipenv-{{ checksum "Pipfile.lock" }}
+            - pipenv-
+      - run: pipenv sync --dev
       - run: pipenv run ./scripts/lint-flake8.sh
 
   lint_isort:
     docker:
       - image: cimg/python:3.10.0
-    environment:
-    resource_class: medium
+    resource_class: xlarge
     steps:
       - checkout
       - restore_cache:
           keys:
             - pipenv-{{ checksum "Pipfile.lock" }}
+            - pipenv-
+      - run: pipenv sync --dev
       - run: pipenv run ./scripts/lint-isort.sh
 
   lint_package_types:
     docker:
       - image: cimg/python:3.10.0
-    environment:
-    resource_class: medium
+    resource_class: xlarge
     steps:
       - checkout
       - restore_cache:
           keys:
             - pipenv-{{ checksum "Pipfile.lock" }}
+            - pipenv-
       - restore_cache:
           keys:
             - mypy-package-{{ .Branch }}
             - mypy-package-main
+      - run: pipenv sync --dev
       - run: pipenv run ./scripts/lint-package-types.sh
       - save_cache:
           key: mypy-package-{{ .Branch }}
@@ -79,29 +71,31 @@ jobs:
   lint_shell:
     docker:
       - image: cimg/python:3.10.0
-    environment:
-    resource_class: medium
+    resource_class: xlarge
     steps:
       - checkout
       - restore_cache:
           keys:
             - pipenv-{{ checksum "Pipfile.lock" }}
+            - pipenv-
+      - run: pipenv sync --dev
       - run: pipenv run ./scripts/lint-shell.sh
 
   lint_test_types:
     docker:
       - image: cimg/python:3.10.0
-    environment:
-    resource_class: medium
+    resource_class: xlarge
     steps:
       - checkout
       - restore_cache:
           keys:
             - pipenv-{{ checksum "Pipfile.lock" }}
+            - pipenv-
       - restore_cache:
           keys:
             - mypy-test-{{ .Branch }}
             - mypy-test-main
+      - run: pipenv sync --dev
       - run: pipenv run ./scripts/lint-test-types.sh
       - save_cache:
           key: mypy-test-{{ .Branch }}
@@ -111,49 +105,68 @@ jobs:
   lint_yaml:
     docker:
       - image: cimg/python:3.10.0
-    environment:
-    resource_class: medium
+    resource_class: xlarge
     steps:
       - checkout
       - restore_cache:
           keys:
             - pipenv-{{ checksum "Pipfile.lock" }}
+            - pipenv-
+      - run: pipenv sync --dev
       - run: pipenv run ./scripts/lint-yaml.sh
 
   test:
     docker:
       - image: cimg/python:3.10.0
-    environment:
-    resource_class: medium
+    resource_class: xlarge
     steps:
       - checkout
       - restore_cache:
           keys:
             - pipenv-{{ checksum "Pipfile.lock" }}
-      - run: pipenv run ./test.sh
+            - pipenv-
+      - run: pipenv sync --dev
+      - run: pipenv run test
       - codecov/upload:
           file: coverage.xml
 
   build:
     docker:
       - image: cimg/python:3.10.0
-    environment:
-    resource_class: medium
+    resource_class: xlarge
     steps:
       - checkout
       - restore_cache:
           keys:
             - pipenv-{{ checksum "Pipfile.lock" }}
-      - run: pipenv run ./build.sh
+            - pipenv-
+      - run: pipenv sync --dev
+      - run: pipenv run build
       - run: pip install dist/*
-      - run: ./test-cli.sh
+      - run: ./scripts/test-cli.sh
       - run: if [[ -z "${CIRCLE_TAG}" ]]; then circleci-agent step halt; fi
       - run: pipenv run twine upload dist/*
 
 workflows:
   default:
     jobs:
-      - cache:
+      - lint_black:
+          context:
+            - python
+
+      - lint_flake8:
+          context:
+            - python
+
+      - lint_isort:
+          context:
+            - python
+
+      - lint_package_types:
+          context:
+            - python
+
+      - lint_shell:
           context:
             - python
           filters:
@@ -162,47 +175,13 @@ workflows:
             tags:
               only: /.*/
 
-      - lint_black:
-          context:
-            - python
-          requires:
-            - cache
-
-      - lint_flake8:
-          context:
-            - python
-          requires:
-            - cache
-
-      - lint_isort:
-          context:
-            - python
-          requires:
-            - cache
-
-      - lint_package_types:
-          context:
-            - python
-          requires:
-            - cache
-
-      - lint_shell:
-          context:
-            - python
-          requires:
-            - cache
-
       - lint_test_types:
           context:
             - python
-          requires:
-            - cache
 
       - lint_yaml:
           context:
             - python
-          requires:
-            - cache
 
       - test:
           context:
@@ -212,8 +191,6 @@ workflows:
               only: /.*/
             tags:
               only: /.*/
-          requires:
-            - cache
 
       - build:
           context:
