--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ types-mock = "*"
 yamllint = "*"
 
 [packages]
-comprehemd = "==1.0.0a4"
+comprehemd = "~=1.0"
 naughtty = "~=1.0"
 thtml = "~=1.0.5"
 
